# social-space-harry

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  main.rs  models.rs  websocket.rs
backend/src/handlers/: auth.rs  chat.rs  friends.rs  groups.rs  mod.rs  posts.rs  users.rs
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  crypto.js
nginx/: Dockerfile  nginx.conf
